--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>black jack game | game</title>
 </head>
 <body>
-    <p>Hello Game | Black jack</p>
+    <p>It's working...</p>
 </body>
 </html>
